# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.19.1
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- eix-update: Treat eix-caches for the same file simultaneously.
	  This dramatically speeds up KEEP_VIRTUALS=true
	  When the first overlay accessing the file is displayed, actually
	  all overlays are handled - the later ones only print a message.
	- Fix ./configure --disable-security (regression of 0.19.0)
	- Improve tests in case of --enable-security.

*eix-0.19.0
	Martin Väth <vaeth at mathematik.uni-wuerzburg.de>:
	- This is a major rewrite (although hopefully not visible to the user;
	  perhaps it is slightly faster which however is hardly visible, since
	  the main bulk is the I/O governed by the kernel).
	     Visible changes:
	- Rename options:
	    --world     -> --selected-file
	    --world-set -> --selected-set
	    --world-all -> --selected
	  Introduce new options --world, --world-file, --world-set (yes, the
	  former two have now a different meaning than in <eix-0.19.0) which
	  behave like the corresponding --selected* but include @system.
	  The intention is to make --world/--selected behave consistently with
	  @world/@selected of portage-2.2_rc47, i.e. world_sets are included
	  for both, and @system is included in @world.
	  The new systematic is: Unless you specify *-file/*-set, both are
	  admissible, and --world* includes @system, but --selected* does not.
	- New cache method sqlite* (analogous to eix*).
	- eix-update: improve percentage output.
	- Allow --nocolor/--force-colors also for eix-update (although this is
	  a misnomer, since it is about the percentage status; the variables
	  stay separated with appropriate names: FORCE_PERCENTAGE/FORCE_COLORS)
	- Fix name output on --help.
	- Fix: KEEP_VIRTUALS=true should now quote ":" correctly, see
	  http://bugs.gentoo.org/show_bug.cgi?id=294773
	- Fix: Now --world-file --world really behaves like --world-file as it
	  should be according to the logic.